Add first and last name to registration

--- a/views/account/signup.jade
+++ b/views/account/signup.jade
@@ -6,6 +6,14 @@ block content
   form.form-horizontal(id='signup-form', method='POST')
     input(type='hidden', name='_csrf', value=_csrf)
     .form-group
+      label.col-sm-3.control-label(for='first_name') First Name
+      .col-sm-7
+        input.form-control(type='text', name='first_name', id='first_name', placeholder='Thorben', autofocus)
+    .form-group
+      label.col-sm-3.control-label(for='last_name') Last Name
+      .col-sm-7
+        input.form-control(type='text', name='last_name', id='last_name', placeholder='Stieler', autofocus)
+    .form-group
       label.col-sm-3.control-label(for='email') Email
       .col-sm-7
         input.form-control(type='email', name='email', id='email', placeholder='Email', autofocus, required)
