--- a/public/css/main.scss
+++ b/public/css/main.scss
@@ -69,3 +69,23 @@ textarea {
 .fa {
   margin-right: 6px;
 }
+
+// Users
+
+.profile-pic {
+  border-radius: 50%;
+  width: 20%;
+}
+
+.user-list {
+  list-style-type: none;
+}
+
+.user-list li {
+  padding-bottom: 20px;
+}
+
+.user-list .profile-info {
+  display: inline-block;
+  padding-left: 20px;
+}
