Add page to see all users

--- a/public/css/main.less
+++ b/public/css/main.less
@@ -61,3 +61,23 @@ footer {
 [class^='ion-'] {
   margin-right: 6px;
 }
+
+// Users
+
+.profile-pic {
+  border-radius: 50%;
+  width: 20%;
+}
+
+.user-list {
+  list-style-type: none;
+}
+
+.user-list li {
+  padding-bottom: 20px;
+}
+
+.user-list .profile-info {
+  display: inline-block;
+  padding-left: 20px;
+}
