--- a/views/home.jade
+++ b/views/home.jade
@@ -1,9 +1,11 @@
 extends layout
 
 block content
-  h1 Hackathon Starter
-  p.lead A boilerplate for Node.js web applications.
+  h1 Welcome to Refugee Finder!
+  p.lead A site to help bring together refugees and native citizens.
   hr
+  img(src="/images/palestinian-man-smiling.jpg" height=250)
+  img(src="/images/business-woman-smiling.jpg" height=250)
   .row
     .col-sm-6
       h2 Heading
