--- a/views/partials/footer.jade
+++ b/views/partials/footer.jade
@@ -3,6 +3,4 @@ footer
     p.pull-left © 2015 Company, Inc. All Rights Reserved
     ul.pull-right.list-inline
       li
-        a(href='https://github.com/sahat/hackathon-starter') GitHub Project
-      li
-        a(href='https://github.com/sahat/hackathon-starter/issues') Issues
+        a(href='https://github.com/rmacqueen') GitHub Project
