--- a/views/partials/footer.jade
+++ b/views/partials/footer.jade
@@ -1,6 +1,7 @@
 footer
   .container.text-center
-    p.pull-left © 2015 Company, Inc. All Rights Reserved
+    p.pull-left © 2015 Company, Inc. All Rights Reserved.
+    a.pull-left(href="/privacy") &nbsp;Privacy Policy
     ul.pull-right.list-inline
       li
         a(href='https://github.com/rmacqueen') GitHub Project
