Add support for hometown

--- a/views/users/showall.jade
+++ b/views/users/showall.jade
@@ -9,4 +9,4 @@ block content
         div.profile-info
           h3=user.profile.name
           p=user.profile.gender
-          p="Rio de Janeiro"
+          p=user.profile.hometown
