--- a/views/layout.jade
+++ b/views/layout.jade
@@ -21,7 +21,9 @@ html
 
     script(src='/js/lib/jquery-2.2.0.min.js')
     script(src='/js/lib/bootstrap.min.js')
+    script(src='/js/lib/jquery-ui.min.js')
     script(src='/js/main.js')
+    script(src="https://cdn.socket.io/socket.io-1.2.0.js")
 
     // Google Analytics: change UA-XXXXX-X to be your site's ID
     script.
