--- a/views/partials/header.jade
+++ b/views/partials/header.jade
@@ -26,6 +26,8 @@
           li(class=(title == 'Create Account') ? 'active' : undefined)
             a(href='/signup') Create Account
         else
+          li
+            a(href="messages") Messages
           li.dropdown(class=(title == 'Account Management') ? 'active' : undefined)
             a.dropdown-toggle(href='#', data-toggle='dropdown')
               if user.profile.picture
