--- a/public/css/main.scss
+++ b/public/css/main.scss
@@ -164,6 +164,18 @@ textarea {
   height: 400px;
 }
 
+.conversation .message-details {
+    background-color: #F2F2F2;
+    border-radius: 5px;
+    box-shadow: 0 0 6px #B2B2B2;
+    display: inline-block;
+    padding: 10px 18px;
+    position: relative;
+    vertical-align: top;
+    margin-top: 5px;
+    margin-bottom: 5px;
+}
+
 .conversation .message-details.myself {
   float: right;
   clear: both;
