--- a/views/messages/showMessages.jade
+++ b/views/messages/showMessages.jade
@@ -13,7 +13,7 @@ block content
          - var participants = thread.participants.map(function(user){return user._id})
          li(data-thread-id="#{thread._id}" data-thread-participants=participants)
            .message-snippet
-             img.profile-pic(src="#{thread.participants[0].profile.picture}")
+             img.profile-pic(src=thread.participants[0].profile.picture || "images/person_placeholder.gif")
              .snippet-text
                .timestamp=thread.messages[0].timeSent.getHours() + ':' + thread.messages[0].timeSent.getMinutes()
                .sender=thread.participants[0].profile.name
