--- a/views/account/profile.jade
+++ b/views/account/profile.jade
@@ -28,6 +28,14 @@ block content
       .col-sm-4
         input.form-control(type='text', name='location', id='location', value='#{user.profile.location}')
     .form-group
+      label.col-sm-2.control-label(for='skills') Skills
+      .col-sm-4
+        textarea.form-control(name='skills', id='skills', placeholder='Type skills here...')
+    .form-group
+      label.col-sm-2.control-label(for='interests') Interests
+      .col-sm-4
+        textarea.form-control(name='interests', id='interests', placeholder='Type interests here...')
+    .form-group
       label.col-sm-2.control-label(for='gravatar') Gravatar
       .col-sm-4
         img(src="#{user.gravatar()}", class='profile', width='100', height='100')
