Use bootstrap img-circle class

--- a/views/users/showall.jade
+++ b/views/users/showall.jade
@@ -5,7 +5,7 @@ block content
     each user, i in users
       - var image_uri = user.profile.picture || '/images/person_placeholder.gif'
       li
-        img.profile-pic(src=image_uri)
+        img.img-circle.profile-pic(src=image_uri)
         div.profile-info
           a(href="/profile/" + user.id)
             h3=user.profile.name
