Use absolute routing for message page

--- a/views/partials/header.jade
+++ b/views/partials/header.jade
@@ -27,7 +27,7 @@
             a(href='/signup') Create Account
         else
           li
-            a(href="messages") Messages
+            a(href="/messages") Messages
           li.dropdown(class=(title == 'Account Management') ? 'active' : undefined)
             a.dropdown-toggle(href='#', data-toggle='dropdown')
               if user.profile.picture
