Don't overload 'user' variable

--- a/views/users/profile.jade
+++ b/views/users/profile.jade
@@ -1,14 +1,14 @@
 extends ../layout
 
 block content
-  h3= user.profile.name
+  h3= spotlight_user.profile.name
   .row
     .col-sm-3
-      img.img-responsive.img-rounded(src=user.profile.picture)
-      p= "Hometown: " + user.profile.hometown
-      p= user.profile.gender
+      img.img-responsive.img-rounded(src=spotlight_user.profile.picture)
+      p= "Hometown: " + spotlight_user.profile.hometown
+      p= spotlight_user.profile.gender
     .col-sm-6
       h3= "My skills"
-      p.lead= user.skills
+      p.lead= spotlight_user.skills
       h3= "My interests:"
-      p.lead= user.interests
+      p.lead= spotlight_user.interests
