--- a/views/account/profile.jade
+++ b/views/account/profile.jade
@@ -28,6 +28,10 @@ block content
       .col-sm-4
         input.form-control(type='text', name='location', id='location', value='#{user.profile.location}')
     .form-group
+      label.col-sm-2.control-label(for='hometown') Hometown
+      .col-sm-4
+        input.form-control(type='text', name='hometown', id='hometown', value='#{user.profile.hometown}')
+    .form-group
       label.col-sm-2.control-label(for='skills') Skills
       .col-sm-4
         textarea.form-control(name='skills', id='skills', placeholder='Type skills here...')
