--- a/views/users/profile.jade
+++ b/views/users/profile.jade
@@ -6,6 +6,7 @@ block content
     .col-sm-3
       img.img-responsive.img-rounded(src=spotlight_user.profile.picture)
       p= "Hometown: " + spotlight_user.profile.hometown
+      p= "Location: " + spotlight_user.profile.location
       p= spotlight_user.profile.gender
     .col-sm-6
       h3= "My skills"
