--- a/views/users/profile.jade
+++ b/views/users/profile.jade
@@ -8,6 +8,7 @@ block content
       p= "Hometown: " + spotlight_user.profile.hometown
       p= "Location: " + spotlight_user.profile.location
       p= spotlight_user.profile.gender
+      include ../partials/newmessage
     .col-sm-6
       h3= "My skills"
       p.lead= spotlight_user.skills
