--- a/public/css/main.scss
+++ b/public/css/main.scss
@@ -74,20 +74,17 @@ textarea {
 // Users
 
 .user-list .profile-pic {
-  width: 20%;
-}
-
-.user-list {
-  list-style-type: none;
-}
-
-.user-list li {
-  padding-bottom: 20px;
+  width: 175px;
+  border: 2px black solid;
 }
 
 .user-list .profile-info {
-  display: inline-block;
-  padding-left: 20px;
+  width: 50%;
+  margin: 0 auto;
+}
+
+.user-list .profile-info .profile-name {
+  text-align: center;
 }
 
 // Messaging
