Style fixes to user feed page
Use div with background to show profile
pic

--- a/public/css/main.less
+++ b/public/css/main.less
@@ -67,12 +67,20 @@ footer {
 
 .user-list .profile-pic {
   width: 175px;
+  height: 175px;
+  border-radius: 50%;
   border: 2px black solid;
+  background-size: cover;
+  background-position: center;
 }
 
 .user-list .profile-info {
   width: 50%;
   margin: 0 auto;
+}
+
+.user-list .profile-info .popover {
+  width: 50%;
 }
 
 .user-list .profile-info .profile-name {
