--- a/views/home.jade
+++ b/views/home.jade
@@ -1,29 +1,18 @@
 extends layout
 
 block content
-  h1 Welcome to Refugee Finder!
-  p.lead A site to help bring together refugees and native citizens.
-  hr
-  img(src="/images/palestinian-man-smiling.jpg" height=250)
-  img(src="/images/business-woman-smiling.jpg" height=250)
+  h1.welcome Welcome to the Bazaar!
+  .splash-image
   .row
-    .col-sm-6
-      h2 Heading
-      p Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui.
-      p
-        a.btn.btn-default(href='#', role='button') View details »
-    .col-sm-6
-      h2 Heading
-      p Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui.
-      p
-        a.btn.btn-default(href='#', role='button') View details »
-    .col-sm-6
-      h2 Heading
-      p Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui.
-      p
-        a.btn.btn-default(href='#', role='button') View details »
-    .col-sm-6
-      h2 Heading
-      p Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui.
-      p
-        a.btn.btn-default(href='#', role='button') View details »
+    .col-md-4
+      .home-page-detail
+        h3 Skills Exchange
+        p We all have skills that others can profit from. And we all can profit from the skills of other people. So why not exchanging them?
+    .col-md-4
+      .home-page-detail
+        h3 Finder
+        p Find people in your vicinity and help each other. Check out how it works.
+    .col-md-4
+      .home-page-detail
+        h3 Interaction
+        p This platform connects locals with refugees. Be friends!
