--- a/views/partials/header.jade
+++ b/views/partials/header.jade
@@ -8,7 +8,7 @@
         span.icon-bar
       a.navbar-brand(href='/')
         i.fa.fa-cube
-        | Refugee Finder
+        | Bazaar
     .collapse.navbar-collapse
       ul.nav.navbar-nav
         li(class=title=='Home'?'active':undefined)
