Fix typo on home page

--- a/views/home.jade
+++ b/views/home.jade
@@ -7,7 +7,7 @@ block content
     .col-md-4
       .home-page-detail
         h3 Skills Exchange
-        p We all have skills that others can profit from. And we all can profit from the skills of other people. So why not exchanging them?
+        p We all have skills that others can profit from. And we all can profit from the skills of other people. So why not exchange them?
     .col-md-4
       .home-page-detail
         h3 Finder
