Give better styling to message threads
Show different background color when they are
active vs. pending etc.

--- a/public/css/main.scss
+++ b/public/css/main.scss
@@ -149,8 +149,13 @@ textarea {
   height: 90px;
 }
 
-.thread-list li.is-active {
-  background-color: #ebebeb;
+.thread-list li.is-pending {
+  background-color: #e9eaed;
+}
+
+.thread-list li.is-active, .thread-list li.is-active:hover {
+  background-color: #6d84b4;
+  color: white;
 }
 
 .thread-list li:hover {
