Disable submit button until user selects recipient

--- a/views/messages/showMessages.jade
+++ b/views/messages/showMessages.jade
@@ -38,5 +38,5 @@ block content
         .form-group
           textarea#text-input(placeholder="Write message" rows=4)
         .form-group
-          button(type="submit") Send message
+          button#send-button(type="submit") Send message
 
