--- a/views/users/profile.jade
+++ b/views/users/profile.jade
@@ -13,3 +13,5 @@ block content
       p.lead= spotlight_user.skills
       h3= "I am interested in:"
       p.lead= spotlight_user.interests
+
+  script(src='/js/profile.js')
