Add selection of skills and interests
in modal box

--- a/public/css/main.less
+++ b/public/css/main.less
@@ -104,6 +104,17 @@ footer {
   text-align: center;
 }
 
+// Account page
+
+input.activity-checkbox {
+  margin-right: 10px;
+}
+
+.user-activities {
+  padding-left: 15px;
+}
+
+
 // Messaging
 
 .message-layout-grid .sidebar {
