Sort users by how closely their skills match
First come people who match skills and interests
then just skills or interests, then none

--- a/public/css/main.less
+++ b/public/css/main.less
@@ -91,6 +91,18 @@ footer {
   background-position: center;
 }
 
+.user-list .profile-pic.both {
+  border-color: green;
+}
+
+.user-list .profile-pic.one {
+  border-color: orange;
+}
+
+.user-list .profile-pic.none {
+  border-color: black;
+}
+
 .user-list .profile-info {
   width: 50%;
   margin: 0 auto;
