--- a/views/partials/header.jade
+++ b/views/partials/header.jade
@@ -15,6 +15,8 @@
           a(href='/') Home
         li(class=title=='Find Users'?'active':undefined)
           a(href='/users') Find Users
+        li(class=title=='About'?'active':undefined)
+          a(href='/about') About
         li(class=title=='Contact'?'active':undefined)
           a(href='/contact') Contact
       ul.nav.navbar-nav.navbar-right
