Registration redirect changes
When you register, you are taken to account page.
When you login, you are taken straight to users
feed.

--- a/public/css/main.less
+++ b/public/css/main.less
@@ -126,6 +126,10 @@ input.activity-checkbox {
   padding-left: 15px;
 }
 
+.btn-social {
+  margin-bottom: 20px;
+}
+
 // Profile page
 
 .review .rating {
