--- a/views/users/profile.jade
+++ b/views/users/profile.jade
@@ -5,6 +5,7 @@ block content
   .row
     .col-sm-3
       img.img-responsive.img-rounded(src=spotlight_user.profile.picture)
+      p= "About me: " + spotlight_user.aboutMe
       p= "Hometown: " + spotlight_user.profile.hometown
       p= "Location: " + spotlight_user.profile.location
       include ../partials/newmessage
