--- a/views/privacy.jade
+++ b/views/privacy.jade
@@ -2,10 +2,10 @@ extends layout
 
 block content
 
-    h1 Refugee Finder Privacy Policy
+    h1 Bazaar Privacy Policy
 
     p
-      | This Privacy Policy governs the manner in which Refugee Finder collects, uses, maintains and discloses information collected from users (each, a "User") of the http://refugeefinder-51070.onmodulus.net/ website ("Site").
+      | This Privacy Policy governs the manner in which Bazaar collects, uses, maintains and discloses information collected from users (each, a "User") of the http://refugeefinder-51070.onmodulus.net/ website ("Site").
     h3 Personal identification information
     p
       | We may collect personal identification information from Users in a variety of ways, including, but not limited to, when Users visit our site, register on the site, and in connection with other activities, services, features or resources we make available on our Site.Users may be asked for, as appropriate, name, email address. Users may, however, visit our Site anonymously. We will collect personal identification information from Users only if they voluntarily submit such information to us. Users can always refuse to supply personally identification information, except that it may prevent them from engaging in certain Site related activities.
@@ -17,7 +17,7 @@ block content
       | Our Site may use "cookies" to enhance User experience. User"s web browser places cookies on their hard drive for record-keeping purposes and sometimes to track information about them. User may choose to set their web browser to refuse cookies, or to alert you when cookies are being sent. If they do so, note that some parts of the Site may not function properly.
     h3 How we use collected information
     p
-      | Refugee Finder may collect and use Users personal information for the following purposes:
+      | Bazaar may collect and use Users personal information for the following purposes:
     ul
       li
         i To run and operate our Site
@@ -39,7 +39,7 @@ block content
       | We do not sell, trade, or rent Users personal identification information to others. We may share generic aggregated demographic information not linked to any personal identification information regarding visitors and users with our business partners, trusted affiliates and advertisers for the purposes outlined above.
     h3 Changes to this privacy policy
     p
-      | Refugee Finder has the discretion to update this privacy policy at any time. When we do, we will post a notification on the main page of our Site, revise the updated date at the bottom of this page. We encourage Users to frequently check this page for any changes to stay informed about how we are helping to protect the personal information we collect. You acknowledge and agree that it is your responsibility to review this privacy policy periodically and become aware of modifications.
+      | Bazaar has the discretion to update this privacy policy at any time. When we do, we will post a notification on the main page of our Site, revise the updated date at the bottom of this page. We encourage Users to frequently check this page for any changes to stay informed about how we are helping to protect the personal information we collect. You acknowledge and agree that it is your responsibility to review this privacy policy periodically and become aware of modifications.
     h3 Your acceptance of these terms
     p
       | By using this Site, you signify your acceptance of this policy. If you do not agree to this policy, please do not use our Site. Your continued use of the Site following the posting of changes to this policy will be deemed your acceptance of those changes. This policy was generated using
