--- a/public/css/main.less
+++ b/public/css/main.less
@@ -74,7 +74,7 @@ footer {
 }
 
 .splash-image {
-  background-image: url("/images/smile.jpg");
+  background-image: url("/images/atlas.jpg");
   background-size: cover;
   width: 100%;
   height: 400px;
