Allow user to see own profile

--- a/views/partials/header.jade
+++ b/views/partials/header.jade
@@ -39,6 +39,8 @@
             ul.dropdown-menu
               li
                 a(href='/account') My Account
+              li
+                a(href='/profile/#{user.id}') View My Profile
               li.divider
               li
                 a(href='/logout') Logout
