Add notification for unread threads
Keep track of which threads have unread messages
for a user and display a counter of total number
of unread threads in the header

--- a/views/partials/header.jade
+++ b/views/partials/header.jade
@@ -25,7 +25,7 @@
           li
             a(href="/transactions") #{user.coins} coins
           li
-            a(href="/messages") Messages
+            a(href="/messages") Messages (#[span#thread-count #{user.unreadThreads.length}])
           li.dropdown(class=title=='Account Management'?'active':undefined)
             a.dropdown-toggle(href='#', data-toggle='dropdown')
               if user.profile.picture
