--- a/views/partials/header.jade
+++ b/views/partials/header.jade
@@ -27,8 +27,8 @@
           li
             a(href="/transactions") #{user.coins} coins
           li
-            a(href="/messages") Messages
-          li.dropdown(class=(title == 'Account Management') ? 'active' : undefined)
+            a(href="/messages") Messages (#[span#thread-count #{user.unreadThreads.length}])
+          li.dropdown(class=title=='Account Management'?'active':undefined)
             a.dropdown-toggle(href='#', data-toggle='dropdown')
               if user.profile.picture
                 img(src='#{user.profile.picture}')
